# flyt

./: .gitignore  .gitmodules  LICENSE  Makefile  NOTES.md  README.md  TEST.md  add_macvlan.sh  cluster-mgr-config.toml  notes-server.md  set_guest_perm.sh  set_host_perm.sh
configs/: client-mgr.toml  cluster-mgr-config.toml  cluster-mgr.toml  node-mgr.toml  servnode-config.toml
control-managers/: Cargo.toml  Makefile  build.rs  client-mgr.toml  protocols.md  resource-mgr-config.toml  servnode-config.toml
control-managers/src/client-manager-daemon/: main.rs  monitor_metrics.rs  monitor_metrics.rs.2  monitor_metrics.rs.bak  monitor_metrics.rs.shm  resource_manager_handler.rs  vcuda_client_handler.rs
control-managers/src/cluster-manager/: bookkeeping.rs  cli_frontend.rs  client_handler.rs  frontend_handler.rs  main.rs  metrics_handler.rs  servernode_handler.rs  tcp_frontend.rs
control-managers/src/common/: api_commands.rs  config.rs  mod.rs  server_metrics.rs  types.rs  utils.rs
control-managers/src/resource-manager/: bookkeeping.rs  cli_frontend.rs  client_handler.rs  frontend_handler.rs  main.rs  servernode_handler.rs
control-managers/src/servernode-daemon/: gpu_cores_getter.c  gpu_manager.rs  main.rs  resource_manager_handler.rs  virt_server_manager.rs
control-managers/tools/: Makefile  get-gpu-sm-cores  get-gpu-sm-cores.cu
cpu/: Makefile  api-recorder.c  api-recorder.h  cpu-client-clnt.c  cpu-client-cublas.c  cpu-client-cublaslt.c  cpu-client-cudnn.c  cpu-client-cusolver.c  cpu-client-driver.c  cpu-client-header.c  cpu-client-ivshmem.c  cpu-client-nvml.c  (+61 more)
(+246 files in other folders)
