[package]
name = "control-managers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = { version = "2.8.2", features = ["tokio-sync"] }
nix = { version = "0.28.0", features = ["fs"] }
nvml-wrapper = "0.10.0"
serde = "1.0.197"
toml = "0.8.12"
ipc-rs = { git = "https://github.com/sam990/ipc-rs.git" }
bytemuck = { version = "1.15.0", features = ["derive"] }
clap = { version = "4.5.4", features = ["cargo", "derive"] }
comfy-table = "7.1.1"

[[bin]]
name = "flyt-client-manager"
path = "src/client-manager-daemon/main.rs"

[[bin]]
name = "flyt-resource-manager"
path = "src/resource-manager/main.rs"

[[bin]]
name = "flyt-node-manager"
path = "src/servernode-daemon/main.rs"

[[bin]]
name = "rmgr-cli"
path = "src/resource-manager/cli_frontend.rs"
